add a nop to provide enough space for the linker and long calls. fixes link errors with 'cerror' and libposix.

from dennis.c.ferguson@gmail.com in PR#43010.